# Common-Functions-in-C

./: CMakeLists.txt  README.md  array_helper.h  base64.c  base64.h  bitmaps.c  bitmaps.h  bitwise.c  bitwise.h  common_functions  main.c  make.txt  numbers.h  strings.c  strings.h  system.c  system.h  types.c  types.h  video.h
common_functions.dSYM/Contents/: Info.plist
common_functions.dSYM/Contents/Resources/DWARF/: common_functions
include/: array_helper.h  bitmaps.h  bitwise.h  strings.h  types.h
libraries/md5/: md5.c  md5.h
libraries/png/: png-decoding.c  png-decoding.h  png-encoding.c  png-encoding.h  png-helper.c  png-helper.h
output/unix/lib/: libcommon_functions.dylib
outputs/: Common_Functions.cbp  Makefile  cmake_install.cmake
outputs/debug/lib/: libcommon_functions.dylib
outputs/lib/apple/: libcommon_functions.dylib
src/: array_helper.c  base64.c  bitmaps.c  bitwise.c  main.c  strings.c  system.c  types.c
test/: test_array_helper.c  test_array_helper.h  test_bitwise.c  test_bitwise.h  test_lz4.c  test_lz4.h  test_md5.c  test_md5.h  test_numbers.c  test_numbers.h  test_opencv.c  test_opencv.h  test_png_decoding.c  test_png_decoding.h  test_png_encoding.c  test_png_encoding.h  test_strings.c  test_strings.h
